# prog-NagyHF

./: CMakeLists.txt  README.md  additional.c  additional.h  cube.txt  debugmalloc-nomacro.h  game.c  game.h  main.c  map.c  map.h  map2.txt  menu.c  menu.h  models.txt  models2.txt  object.c  object.h  player.c  player.h  records.c  records.h  renderer.c  renderer.h
CLionProjects/Labor6/: CMakeLists.txt  main.c
CLionProjects/Labor7/: CMakeLists.txt  main.c
CLionProjects/Labor8/: CMakeLists.txt  main.c
CLionProjects/Labor9/: CMakeLists.txt  main.c
CLionProjects/kiserlet/: CMakeLists.txt  main.c
CLionProjects/testing/: CMakeLists.txt  library.c  library.h
CLionProjects/tests/: main.c
